@@ -44,6 +44,7 @@ Version 1.13.1+dev:
    * Enhanced tab completion in text boxes for friends and for easier whispers answer (bug #9742)
    * Fixed Cancel Orders not working when loading MP game (bug #22133)
    * Fixed load game hot-key not working in the main menu (bug #23215)
+   * Added user's leave notification for ingame players
 
 
 Version 1.13.1:
