@@ -195,6 +195,7 @@ Version 1.13.1+dev:
    * Fixed Cancel Orders not working when loading MP game (bug #22133)
    * Fixed broken Oasis terrain help entry (bug #23023)
    * Fixed load game hot-key not working in the main menu (bug #23215)
+   * Added user's leave notification for ingame players
 
 Version 1.13.1:
  * Security fixes:
